fixed text area size and paragraph overflow

--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ main > span:first-child {
   -o-border-radius: 5px;
 }
 
+/*
+textarea{
+  height: inherit;
+}*/
 main h1 {
   height: 38px;
   width: 233px;
@@ -142,8 +146,13 @@ main ol li:hover .delete {
   visibility: visible;
 }
 
+textarea {
+  height: 10px; 
+}
+
 main ol li p {
-  width: 90%;
+  width: 400px;
+  word-wrap: break-word;
 }
 
 main form:nth-of-type(2) input {
